Graphing of log output.
	* experiments/jump/dataview.ods: Created.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* experiments/jump/dataview.ods: Created.
+
+2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	* experiments/jump/jump.py: Better commenting.
 	(MotorJumpExample.__init__): Private instance variables for class
 	wide constants, timestamp, log variables and log variable
